Fixing the weird list bug where the number is aligned with the bottom of the info

--- a/app/styles/pages/_users.scss
+++ b/app/styles/pages/_users.scss
@@ -8,6 +8,7 @@
   }
   .info {
     display: inline-block;
+    vertical-align: top;
   }
   a {
     display: inline-block;
